--- a/.gitignore
+++ b/.gitignore
@@ -283,7 +283,9 @@ _Pvt_Extensions
 # Paket dependency manager
 .paket/paket.exe
 paket-files/
-
+*.exe
+*.exe.config
+*lprun*
 # FAKE - F# Make
 .fake/
 
